# kedro-viz-finished

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements-mlflow.txt  requirements.txt
airflow/: requirements.txt
airflow/dags/: kedro_pipeline_dag.py  kedro_pipeline_v2_dag.py
conf/base/: catalog.yml
frontend/: README.md  package-lock.json  package.json  server.js
frontend-react/: package-lock.json  package.json  server.js
frontend-react/src/: App.js
frontend-react/src/components/: ArtifactsPanel.jsx  ExecutionLog.jsx  PipelineControlPanel.jsx  PipelineControls.jsx  PipelineVisualization.jsx
frontend/public/: index.html
src/my_project/: mlflow_utils.py  nodes.py  pipeline.py  pipeline_registry.py  settings.py
